refactor changelog description and project to handle multiple version update localization version publish configs

--- a/Water_Features/l10n/es-ES.json
+++ b/Water_Features/l10n/es-ES.json
@@ -8,9 +8,9 @@
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]": "Corrientes estacionales",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]": "Herramienta de agua",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]": "Olas y mareas",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Añadir cuencas de retención (requiere reiniciar)",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Añadir cuencas de retención",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Fuente de agua modificado que se levanta con precisión y nieve y lentamente drena cuando el clima está seco. Tienen una elevación máxima de la superficie del agua y una elevación mínima de la superficie del agua. Es posible que necesite ajustar la tasa global de evaporación en los ajustes para la infiltración deseable del agua del estanque.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Añadir cuencas de detención (Requiere reiniciar)",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Añadir cuencas de retención",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Fuente de agua modificado que se levanta con precisión y nieve y lentamente drena cuando el clima está seco. Tienen una elevación máxima de la superficie del agua y una elevación mínima de la superficie del agua. Es posible que necesite ajustar la tasa global de evaporación en los ajustes para la infiltración deseable del agua del estanque.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]": "Probar radios más pequeños",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]": "Permite tratar de hacer una fuente de agua con un radio menor de 5 metros. No siempre funcionará, sino que aumentará a un radio que funcione.",
@@ -115,10 +115,23 @@
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Versión",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Número de versión instalada del mod Water Features.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Configuración de corrientes estacionales disponibles en el juego o el editor.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Configuración de olas y mareas disponibles en el juego o el editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Configuración de olas y mareas disponible en el juego o editor en mapas antiguos que soportan fuentes de agua antiguas.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Forzar velocidad de simulación del agua",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Intenta forzar una velocidad de simulación de agua de al menos 1x estando en el juego.",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Editor",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Guardado individual",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "General"
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "General",
+  "Assets.NAME[WaterSource Generic]": "Fuente de agua genérica de nivel constante",
+  "Assets.DESCRIPTION[WaterSource Generic]": "Rellena rápidamente hasta que llegue al nivel deseado y luego mantiene ese nivel. Si tiene una elevación objetivo por debajo del nivel del suelo, puede drenar el agua más rápido que la evaporación. El comportamiento y el color cambiarán dependiendo de si está situado dentro del límite del mapa, en el límite del mapa o fuera del área de juego. Clic derecho para designar la elevación objetivo. Clic izquierdo para colocar en cualquier lugar. Señalar y clic derecho para eliminar.",
+  "Assets.NAME[WaterSource Seasonal]": "Fuente de agua estacional",
+  "Assets.DESCRIPTION[WaterSource Seasonal]": "Fuente de agua genérica donde el nivel varía según la configuración de los flujos estacionales, las propiedades estacionales del mapa y el clima actual. El color del anillo y si comportamiento cambiará dependiendo de si está situado dentro del límite del mapa, en el límite del mapa o fuera del área de juego. Clic derecho para designar la elevación objetivo. Clic izquierdo para colocar en cualquier lugar. Señalar y clic derecho para eliminar.",
+  "Water_Features.TOOLTIP_DESCRIPTION[AmountIsElevation]": "Establecer elevación. Alternar para restablecer profundidad.",
+  "Assets.NAME[WaterSource VanillaLake]": "Fuente de agua de nivel constante",
+  "Assets.DESCRIPTION[WaterSource VanillaLake]": "Rellena lentamente hasta que llegue al nivel deseado y luego mantiene ese nivel. Si tiene una elevación objetivo por debajo del nivel del suelo, puede drenar el agua más rápido que la evaporación. Clic derecho para designar la elevación objetivo. Clic izquierdo para colocar en el área de juego. Señalar y clic derecho para eliminar.",
+  "Water_Features.SECTION_TITLE[SeaLevel]": "Nivel del Mar",
+  "Water_Features.SECTION_TITLE[SliderRange]": "Rango del deslizador",
+  "Water_Features.TOOLTIP_TITLE[LockSeaLevel]": "Bloqueo del nivel del mar",
+  "Water_Features.TOOLTIP_DESCRIPTION[LockSeaLevel]": "Alterna si el nivel del mar puede ser modificado o no. Modificar el nivel del mar puede inundar áreas rápidamente. Ten cuidado con el deslizador. Espere que las líneas de contorno se muevan.",
+  "Water_Features.TOOLTIP_TITLE[IncreaseSeaLevelSliderRange]": "Aumentar el rango del deslizador del nivel del mar",
+  "Water_Features.TOOLTIP_TITLE[DecreaseSeaLevelSliderRange]": "Reducir el rango del deslizador del nivel del mar"
 }
