--- a/Water_Features/l10n/fr-FR.json
+++ b/Water_Features/l10n/fr-FR.json
@@ -8,9 +8,9 @@
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]": "Variation de l’eau selon les saisons",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]": "Outils pour l’eau",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]": "Vagues et marées",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Ajouter un bassin de rétention d'eau (redémarrage requis)",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Ajouter un bassin de rétention",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Source d’eau moddée personnalisée qui monte avec les précipitations et la fonte des neiges, et se vide lentement par temps sec. Elle a une élévation maximale et une élévation minimale de la surface de l’eau. Vous devrez peut-être ajuster le taux d’évaporation global dans les paramètres pour obtenir une infiltration souhaitée de l’eau de l’étang.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Ajouter un bassin de rétention d’eau (redémarrage requis)",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Ajouter un bassin de détention",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Source d’eau moddée personnalisée qui augmente avec les précipitations et la fonte des neiges et s'écoule lentement lorsque le temps est sec et chaud. La source d’eau a un seuil maximum et minimum pour ce qui est de la variation. Il faudra peut-être ajuster le taux d'évaporation de l’eau dans les paramètres afin d'avoir le taux d'infiltration désiré dans un étang d’eau.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]": "Essayer des rayons plus petits",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]": "Vous permet d'essayer de créer une source d’eau avec un rayon inférieur à 5 m. Cela ne fonctionnera pas toujours, mais va permettre d'avoir un rayon pour rendre le tout possible.",
@@ -115,10 +115,23 @@
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Numéro de version du mod Water Features installé.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Paramètres des cours d’eau saisonniers disponibles dans le jeu ou l’éditeur.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Paramètres des vagues et marées disponibles dans le jeu ou l’éditeur.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Réglages des vagues et des marées disponibles dans le jeu ou dans l’éditeur pour les cartes plus anciennes qui supportent les sources d’eau legacy.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Forcer la vitesse de simulation de l’eau",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Tente de forcer une vitesse de simulation de l’eau d’au moins 1x en jeu.",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Éditeur",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Fichier de sauvegarde individuel",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "Général"
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "Général",
+  "Assets.NAME[WaterSource Generic]": "Source d’eau générique à niveau constant",
+  "Assets.DESCRIPTION[WaterSource Generic]": "Se remplit rapidement jusqu’à atteindre le niveau souhaité, puis maintient ce niveau. S’il a une élévation cible inférieure au niveau du sol, il peut drainer l’eau plus rapidement que l’évaporation. Son comportement et sa couleur changent selon qu’il est placé à l’intérieur des limites de la carte, sur la limite de la carte ou en dehors de la zone jouable. Cliquez avec le bouton droit pour définir l’élévation cible. Cliquez avec le bouton gauche pour placer n’importe où. Survolez et cliquez avec le bouton droit pour supprimer.",
+  "Assets.NAME[WaterSource Seasonal]": "Source d’eau saisonnière",
+  "Assets.DESCRIPTION[WaterSource Seasonal]": "Source d’eau générique dont le niveau varie selon les paramètres des cours d’eau saisonniers, les propriétés saisonnières de la carte et la météo actuelle. Son comportement et la couleur de son anneau extérieur changent selon qu’elle est placée à l’intérieur des limites de la carte, sur la limite de la carte ou en dehors de la zone jouable. Cliquez avec le bouton droit pour définir l’élévation cible. Cliquez avec le bouton gauche pour placer n’importe où. Survolez et cliquez avec le bouton droit pour supprimer.",
+  "Water_Features.TOOLTIP_DESCRIPTION[AmountIsElevation]": "Élévation définie. Basculez pour réinitialiser à la profondeur.",
+  "Assets.NAME[WaterSource VanillaLake]": "Lac – Source d’eau de niveau constant",
+  "Assets.DESCRIPTION[WaterSource VanillaLake]": "Se remplit lentement jusqu’à atteindre le niveau souhaité, puis maintient ce niveau. S’il a une élévation cible inférieure au niveau du sol, il peut drainer l’eau plus rapidement que l’évaporation. Cliquez avec le bouton droit pour définir l’élévation cible. Cliquez avec le bouton gauche pour placer dans la zone jouable. Survolez et cliquez avec le bouton droit pour supprimer.",
+  "Water_Features.SECTION_TITLE[SeaLevel]": "Niveau de la mer",
+  "Water_Features.SECTION_TITLE[SliderRange]": "Plage du curseur",
+  "Water_Features.TOOLTIP_TITLE[LockSeaLevel]": "Verrouillage du niveau de la mer",
+  "Water_Features.TOOLTIP_DESCRIPTION[LockSeaLevel]": "Active ou désactive la possibilité de modifier le niveau de la mer. Modifier le niveau de la mer peut inonder rapidement des zones. Soyez prudent avec le curseur. Attendez-vous à ce que la ligne de côte se déplace.",
+  "Water_Features.TOOLTIP_TITLE[IncreaseSeaLevelSliderRange]": "Augmenter la plage du curseur du niveau de la mer",
+  "Water_Features.TOOLTIP_TITLE[DecreaseSeaLevelSliderRange]": "Diminuer la plage du curseur du niveau de la mer"
 }
