--- a/Water_Features/l10n/pl-PL.json
+++ b/Water_Features/l10n/pl-PL.json
@@ -8,9 +8,9 @@
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]": "Strumienie sezonowe",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]": "Narzędzie wody",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]": "Fale i pływy",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Dodaj zbiorniki retencyjne (Restart wymagany)",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Dodaj zbiorniki retencyjne",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Niestandardowe źródło wody, które podnosi się wraz z opadami atmosferycznymi oraz topnieniem śniegu i powoli maleje przy suchej pogodzie. Mają maksymalny poziom i minimalny poziom wody. Może być konieczne dostosowanie globalnej szybkości parowania wody w ustawieniach w celu uzyskania pożądanego napływu wody do zbiornika.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Dodaj poldery (Restart wymagany)",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Dodaj poldery",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Niestandardowe źródło wody, które podnosi się wraz z opadami atmosferycznymi oraz topnieniem śniegu i powoli maleje przy suchej pogodzie. Mają maksymalny poziom wody, a nie mają minimalnego poziomu wody. Może być konieczne dostosowanie globalnej szybkości parowania wody w ustawieniach w celu uzyskania pożądanego napływu wody do zbiornika.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]": "Wypróbuj mniejszy promień",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]": "Pozwala na tworzenie źródeł wody o promieniu mniejszym niż 5 m. Jeśli się nie uda utworzyć, to zostanie zwiększony do promienia, który działa.",
@@ -115,10 +115,23 @@
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Wersja",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Numer wersji zainstalowanego moda Water Features.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Zmiany ustawień Sezonowych strumieni dostępne są dopiero w grze lub edytorze.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Zmiany ustawień Fal i pływów dostępne są dopiero w grze lub edytorze.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Ustawienia fal i pływów dostępne w grze lub edytorze na starszych mapach, które obsługują stare źródła wody.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Wymuś prędkość symulacji wody",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Próbuje wymusić prędkość symulacji wody na poziomie co najmniej 1x w grze.",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Edytor",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Tylko na zapis",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "Ogólne"
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "Ogólne",
+  "Assets.NAME[WaterSource Generic]": "Zwykłe źródło wody o stałym poziomie",
+  "Assets.DESCRIPTION[WaterSource Generic]": "Szybko się napełnia, aż osiągnie pożądaną wysokość, po czym utrzymuje ten poziom. Jeśli docelowa wysokość jest pod ziemią, to powinno szybciej wchłonąć wodę niż parowanie. Zachowanie i kolor będzie się zmieniać w zależności od miejsca gdzie jest umieszczone, w obszarze rozgrywki, na granicy mapy, poza obszarem rozgrywki. Kliknij prawym przyciskiem myszy, aby wyznaczyć wysokość źródła. Kliknij lewym przyciskiem myszy, aby umieścić. Usuń, klikając prawym przyciskiem myszy nad źródłem.",
+  "Assets.NAME[WaterSource Seasonal]": "Sezonowe źródło wody",
+  "Assets.DESCRIPTION[WaterSource Seasonal]": "Zwykłe źródło wody, gdzie poziom wody różni się w zależności od ustawień Sezonowych strumieni, sezonowych właściwości mapy i bieżącej pogody. Zachowanie i kolor będzie się zmieniać w zależności od miejsca gdzie jest umieszczone, w obszarze rozgrywki, na granicy mapy, poza obszarem rozgrywki. Kliknij prawym przyciskiem myszy, aby wyznaczyć wysokość źródła. Kliknij lewym przyciskiem myszy, aby umieścić. Usuń, klikając prawym przyciskiem myszy nad źródłem.",
+  "Water_Features.TOOLTIP_DESCRIPTION[AmountIsElevation]": "Ustawiono wysokość. Kliknij, aby zresetować do głębokości.",
+  "Assets.NAME[WaterSource VanillaLake]": "Źródło wody o stałym poziomie",
+  "Assets.DESCRIPTION[WaterSource VanillaLake]": "Wolno się napełnia, aż osiągnie pożądaną wysokość, po czym utrzymuje ten poziom. Jeśli docelowa wysokość jest pod ziemią, to powinno szybciej wchłonąć wodę niż parowanie. Kliknij prawym przyciskiem myszy, aby wyznaczyć wysokość źródła. Kliknij lewym przyciskiem myszy, aby umieścić w obszarze rozgrywki. Usuń, klikając prawym przyciskiem myszy nad źródłem.",
+  "Water_Features.SECTION_TITLE[SeaLevel]": "Poziom morza",
+  "Water_Features.SECTION_TITLE[SliderRange]": "Zakres suwaka",
+  "Water_Features.TOOLTIP_TITLE[LockSeaLevel]": "Blokada poziomu morza",
+  "Water_Features.TOOLTIP_DESCRIPTION[LockSeaLevel]": "Przełącz możliwość zmiany poziomu morza. Zmiana poziomu morza może szybko zalać teren. Zachowaj ostrożność przy używaniu suwaka. Linie konturów ulegną zmienione przez to.",
+  "Water_Features.TOOLTIP_TITLE[IncreaseSeaLevelSliderRange]": "Zwiększ zakres suwaka poziomu morza",
+  "Water_Features.TOOLTIP_TITLE[DecreaseSeaLevelSliderRange]": "Zmniejsz zakres suwaka poziomu morza"
 }
