--- a/Water_Features/lang/pt-PT.json
+++ b/Water_Features/lang/pt-PT.json
@@ -8,9 +8,9 @@
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]": "Riachos sazonais",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]": "Ferramenta de água",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]": "Ondas e marés",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Adicionar bacias de detenção (necessário reiniciar)",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Adicionar bacias de retenção",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Fonte de água personalizada que sobe com a precipitação e o derretimento da neve e drena lentamente quando o clima está seco. Têm uma elevação máxima da superfície da água e uma elevação mínima. Podes precisar ajustar a taxa de evaporação global nas definições para obter a infiltração desejada da água do lago.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Adicionar bacias de retenção (necessário reiniciar)",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Adicionar bacias de detenção",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeDetentionBasins]": "Fonte de água personalizada que sobe com a precipitação e o derretimento da neve e drena lentamente quando o clima está seco. Têm uma elevação máxima da superfície da água, mas sem elevação mínima. Podes precisar ajustar a taxa de evaporação global nas definições para obter a infiltração desejada da água do lago.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]": "Tentar raios menores",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.TrySmallerRadii]": "Permite tentar criar uma fonte de água com um raio menor que 5m. Nem sempre funciona, mas será aumentado para um raio que funcione.",
@@ -56,6 +56,8 @@
   "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]": "Queres repor as definições de ondas e marés?",
   "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Diurnal]": "Diurna",
   "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Semidiurnal]": "Semidiurna",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCausesDamage]": "Água causa inundações e danos",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCausesDamage]": "Activa ou inactiva os sistemas de Danos e Submersão do jogo base. A informação fica guardada em cada ficheiro de 'save'. Quando desligada, esta opção remove todas as inundações e todos os danos provocados por estas que ainda não estejam destruídos.",
   "YY_WATER_FEATURES.Flow": "Fluxo",
   "YY_WATER_FEATURES.Depth": "Profundidade",
   "YY_WATER_FEATURES.MaxDepth": "Profundidade máxima",
@@ -113,10 +115,17 @@
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Versão",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Número da versão do mod Water Features instalada.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Configurações de Fontes de Água Sazonais disponíveis no Jogo ou Editor.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "As configurações de Ondas e Marés estão disponíveis no Jogo ou Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Definições de Ondas e Marés disponíveis no Jogo ou no Editor em mapas antigos que suportam Fontes de Água Legadas.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Forçar velocidade de simulação da água",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Tenta forçar uma simulação de água de pelo menos 1x enquanto estiver no jogo.",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Editor",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Salvar Arquivo Individual",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "Geral"
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "Geral",
+  "Assets.NAME[WaterSource Generic]": "Fonte de água genérica de nível Constante",
+  "Assets.DESCRIPTION[WaterSource Generic]": "Enche rapidamente até atingir o nível desejado e depois mantém esse nível. Se tiver uma elevação-alvo abaixo do nível do solo, pode drenar água mais depressa do que a evaporação. O comportamento e a cor vão mudar consoante esteja colocado dentro dos limites do mapa, na fronteira do mapa ou fora da área jogável. Clica com o botão direito para definir a elevação-alvo. Clica com o botão esquerdo para colocar em qualquer sítio. Passa o cursor por cima e clica com o botão direito para remover.",
+  "Assets.NAME[WaterSource Seasonal]": "Fonte de água sazonal",
+  "Assets.DESCRIPTION[WaterSource Seasonal]": "Fonte de água genérica cujo nível varia de acordo com as definições de cursos de água sazonais, as propriedades sazonais do mapa e o clima atual. O comportamento e a cor do anel exterior vão mudar consoante esteja colocada dentro dos limites do mapa, na fronteira do mapa ou fora da área jogável. Clica com o botão direito para definir a elevação-alvo. Clica com o botão esquerdo para colocar em qualquer sítio. Passa o cursor por cima e clica com o botão direito para remover.",
+  "Water_Features.TOOLTIP_DESCRIPTION[AmountIsElevation]": "Elevação definida. Alterna para voltar a Profundidade.",
+  "Assets.NAME[WaterSource VanillaLake]": "Fonte de água de nível constante",
+  "Assets.DESCRIPTION[WaterSource VanillaLake]": "Enche lentamente até atingir o nível desejado e depois mantém esse nível. Se tiver uma elevação-alvo abaixo do nível do solo, pode drenar a água mais depressa do que a evaporação. Clica com o botão direito para definir a elevação-alvo. Clica com o botão esquerdo para colocar dentro da área jogável. Passa o cursor por cima e clica com o botão direito para remover."
 }
